--- a/app/src/main/res/menu/menu_result.xml
+++ b/app/src/main/res/menu/menu_result.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share"
-        android:showAsAction="never"/>
+        android:showAsAction="always"/>
 
 </menu>
